2007-05-15  Igor Zelmanovich <igorz@mainsoft.com>

	* PageMapper.cs: reverted r77353, 77321
	make it case-insensitive

2007-05-14  Igor Zelmanovich <igorz@mainsoft.com>

	* PageMapper.cs: 
	fixed previous patch

2007-05-13  Igor Zelmanovich <igorz@mainsoft.com>

	* PageMapper.cs: 
	make it case sensitive if file system is case sensitive

2007-01-04  Igor Zelmanovich <igorz@mainsoft.com>

	* PageMapper.cs: refactoring: 
	GetCachedType, GetObjectType - added overloads

2006-08-20  Vladimir Krasnov <vladimirk@mainsoft.com>

	* BaseHttpServlet.cs: merged TLS fixes, workaround for thread problem

2006-08-20  Vladimir Krasnov <vladimirk@mainsoft.com>

	* PageMapper.cs: fixes for aspx parser 2.0

2006-03-29  Konstantin Triger <kostat@mainsoft.com>

	* SessionListener.cs: Use standard mechanism for session_end handling.

2006-03-20  Konstantin Triger <kostat@mainsoft.com>

	* SessionListener.cs: Associate the AppDoamin with current thread.

2006-01-19  Konstantin Triger <kostat@mainsoft.com>

	* BaseHttpServlet.cs: call correct ServletWorkerRequest ctor

2006-01-09  Konstantin Triger <kostat@mainsoft.com>

	* BaseHttpServlet.cs: merging main/32, main/33
	* PageMapper.cs: merging main/17-27
	* J2EEUtils.cs: mergind ghutils.cs@@/main/9
	* Added ObjectInputStream.cs, ObjectOutputStream.cs

2005-09-08  Eyal Alalouf  <eyala@mainsoft.com>
	* BaseHttpServlet.cs, PageMapper.cs, BaseStaticHttpServlet.cs,
	  SessionListener.cs - backward compatibility fixes.
	  PageMapper.cs - bug fix when compiler produces an unclear error.

2005-08-30  Eyal Alalouf  <eyala@mainsoft.com>
	* BaseHttpServlet.cs, SessionListener.cs: Adaptations to global changes in
	  System.Web.

2005-07-24  Eyal Alalouf  <eyala@mainsoft.com>
    * BaseHttpServlet.cs: Set values of .hostingInstallDir & .hostingVirtualPath
	  necessary for integration.
    * J2EEUtils.cs: Removed obsolete function FileExists
2005-07-18  Eyal Alalouf  <eyala@mainsoft.com>

	* BaseHttpServlet.cs: Added file